<resources>
    <string name="app_name">BakingApp</string>
    <string name="item_recipe_image">Recipe image</string>
    <string name="error_internet_connection">Seems you have no internet connection, swipe to retry.</string>
    <string name="retry">Retry</string>
    <string name="servings_label">Servings:</string>
    <string name="ingredients_label">Ingredients</string>
    <string name="recipe_not_selected">Select almost one recipe.</string>
    <string name="step_not_selected">Select almost one step.</string>

    <string name="label_fav_added">Recipe added to favourites</string>
    <string name="label_fav_deleted">Recipe removed from favourites</string>

    <!-- Step Label -->
    <string name="steps_label">Steps</string>
    <string name="step_video_not_available">No video available.</string>
    <string name="step_detail">Step details</string>

    <!-- Content Description -->
    <string name="recipe_image">Recipe image</string>
    <string name="step_number">Step number</string>
    <string name="step_thumbnail">Step\'s Thumbnail</string>

    <!-- Widget -->
    <string name="empty_recipe">You must add at least one favourite recipe!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
</resources>
